<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哔咚</string>
    <string name="app_title">一对一视频秀场</string>
    <string name="app_slogan">人人都是社交明星</string>
    <string name="app_kefu">哔咚社交助手</string>
    <string name="app_service">问题咨询：哔咚社交助手</string>
    <string name="app_weixin">微信客服：zhongyue510</string>
    <string name="app_fangpian">注意事项及防骗提醒</string>
    <string name="weixin_share">[哔咚社交]线上视频约单，聊聊天就可以赚钱</string>
    <string name="action_settings">Settings</string>
    <string name="login_text">登录</string>
    <string name="login_mobile">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="login_forgetpwd">忘记密码？</string>
    <string name="login_reg">免费注册</string>
    <string name="login_licensepre">登录即表示您同意</string>
    <string name="login_license">《哔咚社交产品服务条款》</string>
    <string name="error_network">网络错误，请重试</string>
    <string name="error_mobile">请输入正确的手机号</string>
    <string name="error_pwd">密码为6-16位的字母或数字</string>
    <string name="error_confirmpwd">确认密码为6-16位的字母或数字</string>
    <string name="error_difpwd">两次输入的密码不一致，请重新输入</string>
    <string name="error_varify">请输入验证码</string>
    <string name="error_license">请阅读并同意《哔咚社交产品服务条款》</string>
    <string name="error_sendvarify">验证码发送成功</string>
    <string name="error_invitecode">邀请码是4位</string>
    <string name="error_digit">请输入有效的整数</string>
    <string name="error_overmax">您输入的提现金额大于当前账户可用的金额</string>
    <string name="reg_next">下一步</string>
    <string name="reg_complete">完成</string>
    <string name="reg_licensepre">我已阅读并同意</string>
    <string name="title_reg">注册账号</string>
    <string name="title_password">设置密码</string>
    <string name="title_resetpwd">重置密码</string>
    <string name="password_new_hint">请输入新密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="confirmpassword_hint">重复输入密码</string>
    <string name="male_text">男 ♂</string>
    <string name="male_flag">♂</string>
    <string name="female_text">女 ♀</string>
    <string name="femal_flag">♀</string>
    <string name="gender_tips">性别选定后不能修改，请慎重</string>
    <string name="reginfo_nickname">昵称</string>
    <string name="reginfo_age">年龄</string>
    <string name="reginfo_birthday">生日</string>
    <string name="reginfo_height">身高</string>
    <string name="reginfo_username">真实姓名</string>
    <string name="reginfo_usernametips">真实姓名不公开仅用于支付宝提现，请如实填写！</string>
    <string name="reginfo_weight">体重</string>
    <string name="reginfo_career">职业</string>
    <string name="reginfo_sign">个性签名</string>
    <string name="common_cancel">取消</string>
    <string name="commmon_complete">完成</string>
    <string name="commmon_upload">上传</string>
    <string name="common_localvideo">上传本地视频</string>
    <string name="common_recordvideo">短视频</string>
    <string name="common_localpic">照片</string>
    <string name="common_takecamera">拍照</string>
    <string name="common_photo">从相册选取</string>
    <string name="common_camera_avatar">拍摄头像</string>
    <string name="common_uploadvideo_auth">认证视频已上传，我们会尽快审核</string>
    <string name="common_video_record">拍摄个人形象认证视频并审核通过后，才能发起互动和约单，如果已拍摄请等待审核，谢谢！</string>
    <string name="permissions_tips_camera_audio">开启权限后，才能正常拍摄</string>
    <string name="qupai_permission_setting">设置</string>
    <string name="qupai_permission_cancel">取消</string>
    <string name="error_uploadavatar">头像上传失败</string>
    <string name="error_uploadfile">文件上传失败</string>
    <string name="error_age">请输入18-68的岁数值</string>
    <string name="error_height">请输入100-300的身高值</string>
    <string name="error_weight">请输入30-300的体重值</string>
    <string name="error_price">请输入0-20000的整数值</string>
    <string name="error_descr">请输入说明</string>
    <string name="error_idel_time">请选择空闲时间</string>
    <string name="regvideo_upload">点击拍摄认证视频</string>
    <string name="regvideo_uploadtips">建议使用手持身份证正反面录制视频上传，平台属真实用户交友系统，需提供真实用户资料以便通过审核！</string>
    <string name="title_regvideo">注册-拍摄封面视频</string>
    <string name="title_authvideo">拍摄认证视频</string>
    <string name="error_regvideo">请拍摄视频</string>
    <string name="title_forgetpwd">忘记密码</string>
    <string name="tab_square">广场</string>
    <string name="tab_gift">礼尚</string>
    <string name="tab_order">约单</string>
    <string name="tab_message">消息</string>
    <string name="tab_me">我的</string>
    <string name="title_message">消息</string>
    <string name="switcher_come">往</string>
    <string name="switcher_go">来</string>
    <string name="switcher_nearby">附近</string>
    <string name="switcher_trend">动态</string>
    <string name="switcher_service">约吗</string>
    <string name="switcher_hot">最热</string>
    <string name="userdetail_allvideo">他的全部视频</string>
    <string name="common_find_all">查看全部</string>
    <string name="common_select_item">请选择要查看的项目</string>
    <string name="common_contact">与TA互动</string>
    <string name="common_charge">充值</string>
    <string name="addfriend_tips">TA接受礼物即成为你的好友</string>
    <string name="addfriend_female_tips">她接受礼物即可成为你的好友</string>
    <string name="addfriend_male_tips">他接受礼物即可成为你的好友</string>
    <string name="commmon_comment">评论</string>
    <string name="comment_count">条</string>
    <string name="common_send">发送</string>
    <string name="send_tips">有什么想法快来说说吧</string>
    <string name="me_level">我的等级</string>
    <string name="me_basicinfo">基本信息</string>
    <string name="me_personalvideo">个人动态</string>
    <string name="me_offlineservice">线下约会</string>
    <string name="me_liker">喜欢我的</string>
    <string name="me_visitor">最近来访</string>
    <string name="me_offservice_descr_hint">请填写技能或特长、服务地点、服务范围等</string>
    <string name="me_offservice_prompt">平台不代收线下约会费用，请自行交易；如果不想泄漏个人支付账户，也可让对方在平台上通过送礼物的形式支付。</string>
    <string name="me_model">实名认证</string>
    <string name="me_accountinfo">账户信息</string>
    <string name="me_about">关于</string>
    <string name="me_license">用户协议</string>
    <string name="me_logout">退出登录</string>
    <string name="order_receive_prompt">如果拒绝或对方取消，诚意礼物将退回\n在线收款更安全，不泄漏个人账户信息</string>
    <string name="order_send_prompt">如果取消或对方拒绝，诚意礼物将退回\n在线付款更安全，不泄漏个人账户信息</string>
    <string name="gift_receive_prompt">如果拒绝或对方取消，诚意礼物将退回</string>
    <string name="gift_send_prompt">如果取消或对方拒绝，诚意礼物将退回</string>
    <string name="send_gift_tips">送出礼物即可与对方互动</string>
    <string name="common_sent">送出</string>
    <string name="gift_send_success">礼物发送成功</string>
    <string name="common_accept">接受</string>
    <string name="common_refuse">拒绝</string>
    <string name="common_delete">删除</string>
    <string name="title_giftdetail">礼物单</string>
    <string name="title_orderdetail">约单</string>
    <string name="title_order_in">约我</string>
    <string name="title_order_out">我约</string>
    <string name="title_off_service">线下约会</string>
    <string name="gift_chargeaccounttips">账户余额：</string>
    <string name="section_charge">充值：</string>
    <string name="section_free">免费：</string>
    <string name="section_charge_descr">充值(能用钱解决的问题，就不去耗时间)</string>
    <string name="bindwechat">绑定支付宝即可获取，每人一次</string>
    <string name="gobind">去绑定</string>
    <string name="charge_tips">充值即表示同意</string>
    <string name="charge_chargetips">《哔咚社交充值协议》</string>
    <string name="title_accountinfo">账户信息</string>
    <string name="account_myasserts">我的资产</string>
    <string name="unit">金币</string>
    <string name="common_applycash">提现</string>
    <string name="wechatwallet">支付宝钱包账号</string>
    <string name="bind">绑定</string>
    <string name="unbind">未绑定</string>
    <string name="charge_records">充值记录</string>
    <string name="applycash_records">提现记录</string>
    <string name="receivegifts">收到的礼物</string>
    <string name="sendgifts">送出的礼物</string>
    <string name="total_value">总值</string>
    <string name="applycash_hint">请输入提现金额/大于100元</string>
    <string name="applycash_tips">提现需收取10%手续费</string>
    <string name="applycahs_tips2">（如：提现100元实际到账100-100*10%=90元）</string>
    <string name="applycahs_tips3">T+1个工作日内到账，请耐心等待，谢谢</string>
    <string name="common_commit">提交</string>
    <string name="title_bindwechat">绑定收款支付宝账号</string>
    <string name="wechat_bind_tips">用支付宝支付后即绑定</string>
    <string name="common_pay">支付</string>
    <string name="common_save">保存</string>
    <string name="common_publish">发布</string>
    <string name="common_order_female">约她</string>
    <string name="common_order_male">约他</string>
    <string name="common_complete">完成</string>
    <string name="common_confirm">确定</string>
    <string name="common_more">更多</string>
    <string name="common_new_trends">最新动态</string>
    <string name="save_success">保存成功</string>
    <string name="title_peronalvideos">个人视频</string>
    <string name="video_remark">这一刻的想法...</string>
    <string name="common_beggift">要礼物</string>
    <string name="common_sendgift">送礼物</string>
    <string name="cashapply_totaltips">提现总额：￥</string>
    <string name="title_chargerecords">充值记录</string>
    <string name="title_cashrecords">提现记录</string>
    <string name="title_about">关于</string>
    <string name="title_level">我的等级</string>
    <string name="title_gift_select">请选择礼物</string>
    <string name="shield_contacts">哔咚社交将上传你的手机通讯录至哔咚社交服务器以屏蔽通讯录联系人，这样你的通讯录联系人在哔咚社交上就看不到你。哔咚社交仅使用手机号用于屏蔽，不会保存通讯录其他内容。</string>
</resources>
