<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bk_color" >

    <android.support.v4.view.ViewPager  
       android:id="@+id/pager_main_pager"  
       android:layout_width="wrap_content"  
       android:layout_height="0dp"  
       android:layout_gravity="center"  
       android:layout_weight="1.0"  
       android:background="#000000"  
       android:flipInterval="30"  
       android:persistentDrawingCache="animation" />

    <LinearLayout style="@style/gray_horizon_divider2"></LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout 
            android:id="@+id/layout_tab_square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="1.0"
            android:gravity="center_horizontal">
            <ImageView 
                android:id="@+id/image_tab_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_square" />
            <TextView 
                android:id="@+id/txt_tab_square"
				style="@style/tab_text"  
				android:text="@string/tab_square" />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/layout_tab_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="1.0"
            android:gravity="center_horizontal">
            <ImageView 
                android:id="@+id/image_tab_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_gift" />
            <TextView 
                android:id="@+id/txt_tab_gift"
				style="@style/tab_text"  
				android:text="@string/tab_gift" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_tab_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="1.0"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/image_tab_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_order" />
            <TextView
                android:id="@+id/txt_tab_order"
                style="@style/tab_text"
                android:text="@string/tab_order" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_tab_message" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="1.0"
            android:gravity="center_horizontal">
            <ImageView 
                android:id="@+id/image_tab_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_message" />
            <TextView 
                android:id="@+id/txt_tab_message"
				style="@style/tab_text"  
				android:text="@string/tab_message" />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/layout_tab_me" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_weight="1.0"
            android:gravity="center_horizontal">
            <ImageView 
                android:id="@+id/image_tab_me" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_me" />
            <TextView 
                android:id="@+id/txt_tab_me" 
				style="@style/tab_text"  
				android:text="@string/tab_me" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout style="@style/gray_horizon_divider2"></LinearLayout>

</LinearLayout>
