<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bk_color" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="12dp"
        android:background="#bbbbbb"
        android:gravity="center"
        >
        <com.intexh.bidong.widgets.FixImageView
            android:id="@+id/image_regvideo_snap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:fiximage_ratio="0.6"
            />
        
        <LinearLayout
            android:id="@+id/layout_regvideo_center_tip"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_camera"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				style="@style/white_15_text"
				android:layout_marginLeft="8dp"
				android:text="@string/regvideo_upload"
                />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_reg_videocontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:visibility="gone">

            <com.github.rtoshiro.view.video.FullscreenVideoLayout
                android:id="@+id/video_reg_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </FrameLayout>

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/regvideo_uploadtips"
        style="@style/lightred_15_text"
        />
    
    <Button 
        android:id="@+id/btn_regvideo_complete"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:text="@string/commmon_upload"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_login"
        android:layout_marginTop="13dp"
        />
    
</LinearLayout>
