<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" 
    android:background="@color/main_bk_color">
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="36dp"
        />
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/black_15_text"
	    android:text="@string/app_name"
	    android:layout_marginTop="7dp"
	    />

	<TextView
	    android:id="@+id/txt_about_version"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/text_12_6c7a82"
	    android:layout_marginTop="9dp"
	    android:text=""
	    />
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/black_15_text"
	    android:text="网址：http://www.wappr.cn"
		android:visibility="gone"
	    android:layout_marginTop="35dp"
	    />
	
	<TextView
		android:id="@+id/txt_about_helper"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/black_15_text"
	    android:text="@string/app_service"
		android:visibility="gone"
	    android:layout_marginTop="16dp"
	    />

	<TextView
		android:id="@+id/txt_about_kefu"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/black_15_text"
		android:text="@string/app_weixin"
		android:visibility="gone"
		android:layout_marginTop="16dp"
		/>

	<TextView
		android:id="@+id/txt_about_fangpian"
		style="@style/lightred_15_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_fangpian"
		android:layout_marginTop="16dp"/>
	
	<LinearLayout 
	    style="@style/horizon_gray_divider"
	    android:layout_marginTop="28dp"
	    ></LinearLayout>
	
	<RelativeLayout 
	    android:id="@+id/layout_about_update"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffff"
	    android:padding="14dp"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/black_15_text"
	        android:text="版本更新"
	        />
	    
	    <TextView 
	        android:id="@+id/txt_about_update"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        style="@style/text_15_6e6e6e"
	        android:text=""
	        />
	</RelativeLayout>
	
	<LinearLayout 
	    style="@style/horizon_gray_divider"
	    ></LinearLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:orientation="vertical"
	        android:gravity="center_horizontal"
	        android:paddingBottom="10dp"
	        >
	        
	        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="用户协议"
                android:textColor="#666666"
                android:textSize="12sp" 
                android:layout_marginBottom="10dp"
                />
	        <TextView
                android:id="@+id/txt_setting_copy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="copyright  2015-2017  BiDong All  Rights  Reserved"
                android:textColor="#666666"
                android:textSize="12sp" 
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="哔咚社交团队"
                android:textColor="#666666"
                android:textSize="12sp" 
                />
	    </LinearLayout>
	    
	</RelativeLayout>
	
</LinearLayout>
